trunk/NewArchive/51f84a517077ae3dfad0317ca9dbce31-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of ‘T Cxx<T>::foo() [with T = int]’:
main.cpp:46:1:   required from here
main.cpp:9:7: error: ‘int C<int>::z’ is private
     T z;
       ^
main.cpp:27:27: error: within this context
     T foo() {return this->z;};
                           ^
